--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -80,6 +80,7 @@
 
     <com.android.settingslib.RestrictedPreference
         android:key="wallpaper"
+        android:icon="@drawable/ic_settings_themes"
         android:title="@string/wallpaper_settings_title"
         settings:keywords="@string/keywords_display_wallpaper"
         settings:useAdminDisabledSummary="true"
@@ -152,6 +153,7 @@
 
     <Preference
         android:key="display_cutout_force_fullscreen_settings"
+        android:icon="@drawable/ic_settings_full_screen_apps"
         android:title="@string/display_cutout_force_fullscreen_title"
         android:summary="@string/display_cutout_force_fullscreen_summary"
         android:fragment="com.android.settings.display.DisplayCutoutForceFullscreenSettings"
