--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -88,6 +88,7 @@
 
     <Preference
         android:key="color_mode"
+        android:icon="@drawable/ic_settings_colors"
         android:title="@string/color_mode_title"
         android:fragment="com.android.settings.display.ColorModePreferenceFragment"
         settings:controller="com.android.settings.display.ColorModePreferenceController"
@@ -165,7 +166,6 @@
         android:key="vr_display_pref"
         android:title="@string/display_vr_pref_title"
         android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
-    
     <PreferenceCategory
         android:key="theme_customization_category"
         android:title="@string/theme_customization_category"
@@ -173,6 +173,7 @@
 
         <com.android.settings.display.darkmode.DarkModePreference
             android:key="dark_ui_mode"
+    	    android:icon="@drawable/ic_settings_darkui"
             android:title="@string/dark_ui_mode"
             android:fragment="com.android.settings.display.darkmode.DarkModeSettingsFragment"
             android:widgetLayout="@null"
